--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-cookies": "~1.2.0",
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
-    "ngInfiniteScroll": "~1.0.0"
+    "ngInfiniteScroll": "~1.0.0",
+    "angular-animate": "~1.2.14"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
