--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
     "ngInfiniteScroll": "~1.0.0",
-    "angular-animate": "~1.2.14"
+    "angular-animate": "~1.2.14",
+    "lodash": "~2.4.1",
+    "jquery": "~2.1.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
